# bubbles

./: .gitattributes  bubbles.ipynb  pyproject.toml
.ipynb_checkpoints/: bubbles-checkpoint.ipynb
src/bubbles/: agents.py  core.py  dz.py  investors.py  market.py  protocols.py  simulation.py  test_agents.py  timeseries.py
