[project]
name = "bubbles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey Rosenbluth", email = "jeffrey.rosenbluth@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "itables>=2.2.5",
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "scipy>=1.15.2",
]

[project.scripts]
bubbles = "bubbles:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "types-numpy",
    "pandas-stubs",
    "types-polars",
    "types-scipy",
]
lint = [
    "ruff>=0.9.7",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
plugins = ["numpy.typing.mypy_plugin", "scipy.typing.mypy_plugin"]